skills container started

--- a/index.html
+++ b/index.html
@@ -129,6 +129,27 @@
                         <div><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                             industry's standard dummy text</p></div>
                     </div>
+                    <div class="items">
+                        <div class="skills_icon">
+                            <img src="./assets/css-3.svg" alt="">
+                        </div>
+                        <div><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                            industry's standard dummy text</p></div>
+                    </div>
+                    <div class="items">
+                        <div class="skills_icon">
+                            <img src="./assets/javascript.svg" alt="">
+                        </div>
+                        <div><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                            industry's standard dummy text</p></div>
+                    </div>
+                    <div class="items">
+                        <div class="skills_icon">
+                            <img src="./assets/node-js.svg" alt="">
+                        </div>
+                        <div><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                            industry's standard dummy text</p></div>
+                    </div>
                 </div>
             </div>
         </section>
