--- a/index.html
+++ b/index.html
@@ -126,28 +126,28 @@
                         <div class="skills_icon">
                             <img src="./assets/html-5.svg" alt="">
                         </div>
-                        <div><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                        <div class="skills_description"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                             industry's standard dummy text</p></div>
                     </div>
                     <div class="items">
                         <div class="skills_icon">
                             <img src="./assets/css-3.svg" alt="">
                         </div>
-                        <div><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                        <div class="skills_description"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                             industry's standard dummy text</p></div>
                     </div>
                     <div class="items">
                         <div class="skills_icon">
                             <img src="./assets/javascript.svg" alt="">
                         </div>
-                        <div><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                        <div class="skills_description"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                             industry's standard dummy text</p></div>
                     </div>
                     <div class="items">
                         <div class="skills_icon">
                             <img src="./assets/node-js.svg" alt="">
                         </div>
-                        <div><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                        <div class="skills_description"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                             industry's standard dummy text</p></div>
                     </div>
                 </div>
