--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </div>
                 </div>
         </aside>
-        <section id="about_me_section">
+        <article>
             <nav id="navbar">
                 <ul>
                     <li><a href="index.html" class="nav_link">About</a></li>
@@ -90,71 +90,29 @@
                     <li><a href="contact.html" class="nav_link">Contact</a></li>
                 </ul>
             </nav>
-            <header class="title">
-                <h1>About Me</h1>
-            </header>
-            <div id="about_me_content">
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text
-                    ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                    specimen book. It has survived
-                    not only five centuries, but also the leap into electronic typesetting, remaining essentially
-                    unchanged. It was popularised in the
-                    1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
-                    desktop publishing software like
-                    Aldus PageMaker including versions of Lorem Ipsum.
-                </p>
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text
-                    ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                    specimen book. It has survived
-                    not only five centuries, but also the leap into electronic typesetting, remaining essentially
-                    unchanged. It was popularised in the
-                    1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
-                    desktop publishing software like
-                    Aldus PageMaker including versions of Lorem Ipsum.
-                </p>
-            </div>
-            <div id="skills_container">
+            <section class="content_container">
                 <div class="title">
-                    <h1>My skills</h1>
+                    <h1>About Me</h1>
                 </div>
-                <div class="skills_content">
-                    <div class="items">
-                        <div class="skills_icon">
-                            <img src="./assets/html-5.svg" alt="">
-                        </div>
-                        <div class="skills_description"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                            industry's standard dummy text</p></div>
-                    </div>
-                    <div class="items">
-                        <div class="skills_icon">
-                            <img src="./assets/css-3.svg" alt="">
-                        </div>
-                        <div class="skills_description"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                            industry's standard dummy text</p></div>
-                    </div>
-                    <div class="items">
-                        <div class="skills_icon">
-                            <img src="./assets/javascript.svg" alt="">
-                        </div>
-                        <div class="skills_description"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                            industry's standard dummy text</p></div>
-                    </div>
-                    <div class="items">
-                        <div class="skills_icon">
-                            <img src="./assets/node-js.svg" alt="">
-                        </div>
-                        <div class="skills_description"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                            industry's standard dummy text</p></div>
-                    </div>
+                <div class="about_me_content">
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting 
+                        industry. Lorem Ipsum has been the industry's standard dummy text
+                         ever since the 1500s, when an unknown printer took a galley of 
+                         type and scrambled it to make a type specimen book.
+                    </p>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting 
+                        industry. Lorem Ipsum has been the industry's standard dummy text
+                         ever since the 1500s, when an unknown printer took a galley of 
+                         type and scrambled it to make a type specimen book.
+                    </p>
                 </div>
-            </div>
-        </section>
+            </section>
+        </article>
     </main>
+
+
     <script src="./js/script.js"></script>
 </body>
-
 </html>
