debugging sills section

--- a/index.html
+++ b/index.html
@@ -108,6 +108,51 @@
                          type and scrambled it to make a type specimen book.
                     </p>
                 </div>
+                <div id="skills_container">
+                    <div class="sills_title">
+                        <h1>My skills</h1>
+                    </div>
+                    <div class="skills_items">
+                        <div class="skills_icons">
+                            <img src="./assets/html-5.svg" alt="HTML icon">
+                        </div>
+                        <div>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry
+                            </p>
+                        </div>
+                    </div>
+                    <div class="skills_items">
+                        <div class="skills_icons">
+                            
+                            <img src="./assets/css-3.svg" alt="HTML icon"></div>
+                        <div>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry
+                            </p>
+                        </div>
+                    </div>
+                    <div class="skills_items">
+                        <div class="skills_icons">
+                            <img src="./assets/javascript.svg" alt="HTML icon">
+                        </div>
+                        <div>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry
+                            </p>
+                        </div>
+                    </div>
+                    <div class="skills_items">
+                        <div class="skills_icons">
+                            <img src="./assets/node-js.svg" alt="HTML icon">
+                        </div>
+                        <div>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </section>
         </article>
     </main>
