--- a/index.html
+++ b/index.html
@@ -109,49 +109,43 @@
                     </p>
                 </div>
                 <div id="skills_container">
-                    <div class="sills_title">
-                        <h1>My skills</h1>
+                    <div>
+                        <h1>My Skills</h1>
                     </div>
-                    <div class="skills_items">
-                        <div class="skills_icons">
-                            <img src="./assets/html-5.svg" alt="HTML icon">
-                        </div>
-                        <div>
-                            <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry
-                            </p>
-                        </div>
-                    </div>
-                    <div class="skills_items">
-                        <div class="skills_icons">
-                            
-                            <img src="./assets/css-3.svg" alt="HTML icon"></div>
-                        <div>
-                            <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry
-                            </p>
-                        </div>
-                    </div>
-                    <div class="skills_items">
-                        <div class="skills_icons">
-                            <img src="./assets/javascript.svg" alt="HTML icon">
-                        </div>
-                        <div>
-                            <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry
-                            </p>
-                        </div>
-                    </div>
-                    <div class="skills_items">
-                        <div class="skills_icons">
-                            <img src="./assets/node-js.svg" alt="HTML icon">
-                        </div>
-                        <div>
-                            <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry
-                            </p>
-                        </div>
-                    </div>
+                    <ul>
+                        <li class="skills_items">
+                            <div class="skills_icon"><img src="./assets/html-5.svg" alt="HTML icon"></div>
+                            <div class="skills_description">
+                                <p>
+                                    Intermediary knowlodge of build the inicial layout of websites using semantic tags of HTM5
+                                </p>
+                            </div>
+                        </li>
+                        <li class="skills_items">
+                            <div class="skills_icon"><img src="./assets/html-5.svg" alt="HTML icon"></div>
+                            <div class="skills_description">
+                                <p>
+                                    Intermediary knowlodge of build the inicial layout of websites using semantic tags of HTM5
+                                </p>
+                            </div>
+                        </li>
+                        <li class="skills_items">
+                            <div class="skills_icon"><img src="./assets/html-5.svg" alt="HTML icon"></div>
+                            <div class="skills_description">
+                                <p>
+                                    Intermediary knowlodge of build the inicial layout of websites using semantic tags of HTM5
+                                </p>
+                            </div>
+                        </li>
+                        <li class="skills_items">
+                            <div class="skills_icon"><img src="./assets/html-5.svg" alt="HTML icon"></div>
+                            <div class="skills_description">
+                                <p>
+                                    Intermediary knowlodge of build the inicial layout of websites using semantic tags of HTM5
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </section>
         </article>
