--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </p>
                 </div>
                 <div id="skills_container">
-                    <div>
+                    <div class="skills_title">
                         <h1>My Skills</h1>
                     </div>
                     <ul>
@@ -122,7 +122,7 @@
                             </div>
                         </li>
                         <li class="skills_items">
-                            <div class="skills_icon"><img src="./assets/html-5.svg" alt="HTML icon"></div>
+                            <div class="skills_icon"><img src="./assets/css-3.svg" alt="CSS icon"></div>
                             <div class="skills_description">
                                 <p>
                                     Intermediary knowlodge of build the inicial layout of websites using semantic tags of HTM5
@@ -130,7 +130,7 @@
                             </div>
                         </li>
                         <li class="skills_items">
-                            <div class="skills_icon"><img src="./assets/html-5.svg" alt="HTML icon"></div>
+                            <div class="skills_icon"><img src="./assets/javascript.svg" alt="JavaScript icon"></div>
                             <div class="skills_description">
                                 <p>
                                     Intermediary knowlodge of build the inicial layout of websites using semantic tags of HTM5
@@ -138,7 +138,7 @@
                             </div>
                         </li>
                         <li class="skills_items">
-                            <div class="skills_icon"><img src="./assets/html-5.svg" alt="HTML icon"></div>
+                            <div class="skills_icon"><img src="./assets/node-js.svg" alt="Node.js icon"></div>
                             <div class="skills_description">
                                 <p>
                                     Intermediary knowlodge of build the inicial layout of websites using semantic tags of HTM5
