--- a/resume.html
+++ b/resume.html
@@ -81,7 +81,7 @@
                     </div>
                 </div>
         </aside>
-        <section id="about_me_section">
+        <article>
             <nav id="navbar">
                 <ul>
                     <li><a href="index.html" class="nav_link">About</a></li>
@@ -90,14 +90,36 @@
                     <li><a href="contact.html" class="nav_link">Contact</a></li>
                 </ul>
             </nav>
-           <section id="resume_section">
-            <div class="title"><h1>Resume</h1></div>
-            <div id="education_section">
-                <div class="icons"><img src="./assets/book.png" alt=""></div>
-            </div>
-           </section>
-        </section>
+            <section class="content_container">
+                <div class="title">
+                    <h1>Resume</h1>
+                </div>
+                <div id="resume_content">
+                    <div class="resume_timeline">
+                        <div class="resume_titles">
+                            <span class="icons"><img src="./assets/book.png" alt=""></span>
+                            <h1>Education</h1>
+                        </div>
+                    </div>
+                    <ul class="roadmap_items">
+                        <li>
+                            <h2>Universidade Cruzeiro do Sul - Software enginear</h2>
+                            <p>2023 - In progress</p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum 
+                                repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id repellendus
+                            </p>
+                            <span class="mark"></span>
+                        </li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </section>
+        </article>
     </main>
+
+
     <script src="./js/script.js"></script>
 </body>
 </html>
