creating an education roadmap

--- a/resume.html
+++ b/resume.html
@@ -111,8 +111,25 @@
                             </p>
                             <span class="mark"></span>
                         </li>
-                        <li></li>
-                        <li></li>
+                        <li>
+                        <li>
+                            <h2>SENAI IT School - Computer Network</h2>
+                            <p>2019 - 2020</p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum 
+                                repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id repellendus
+                            </p>
+                            <span class="mark"></span>
+                        </li>
+                        <li>
+                            <h2>CNA - English School</h2>
+                                <p>2016 - 2021</p>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum 
+                                    repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id repellendus
+                                </p>
+                                <span class="mark"></span>
+                        </li>
                     </ul>
                 </div>
             </section>
