resume style finished

--- a/resume.html
+++ b/resume.html
@@ -101,34 +101,59 @@
                             <h1>Education</h1>
                         </div>
                     </div>
-                    <ul class="roadmap_items">
-                        <li>
+                    <ul class="timeline_list">
+                        <li class="timeline_items">
                             <h2>Universidade Cruzeiro do Sul - Software enginear</h2>
                             <p>2023 - In progress</p>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum 
-                                repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id repellendus
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum
+                                repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id
+                                repellendus
                             </p>
-                            <span class="mark"></span>
                         </li>
-                        <li>
-                        <li>
+                        <li class="timeline_items">
                             <h2>SENAI IT School - Computer Network</h2>
                             <p>2019 - 2020</p>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum 
-                                repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id repellendus
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum
+                                repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id
+                                repellendus
                             </p>
-                            <span class="mark"></span>
                         </li>
-                        <li>
+                        <li class="timeline_items">
                             <h2>CNA - English School</h2>
-                                <p>2016 - 2021</p>
-                                <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum 
-                                    repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id repellendus
-                                </p>
-                                <span class="mark"></span>
+                            <p>2016 - 2021</p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum
+                                repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id
+                                repellendus
+                            </p>
+                        </li>
+                    </ul>
+                    <div class="resume_timeline">
+                        <div class="resume_titles">
+                            <span class="icons"><img src="./assets/book.png" alt="Book icon"></span>
+                            <h1>Experience</h1>
+                        </div>
+                    </div>
+                    <ul class="timeline_list">
+                        <li class="timeline_items">
+                            <h2>Foundever - Tecncial Support Analyst</h2>
+                            <p>2023 - Present</p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum
+                                repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id
+                                repellendus
+                            </p>
+                        </li>
+                        <li class="timeline_items">
+                            <h2>Fidelity - Incoming telemarketer</h2>
+                            <p>2018 - 2019</p>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum
+                                repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id
+                                repellendus
+                            </p>
                         </li>
                     </ul>
                 </div>
@@ -139,4 +164,5 @@
 
     <script src="./js/script.js"></script>
 </body>
+
 </html>
