starting portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -91,62 +91,13 @@
                 </ul>
             </nav>
             <section class="content_container">
-                <div class="title">
-                    <h1>About Me</h1>
-                </div>
-                <div class="about_me_content">
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting 
-                        industry. Lorem Ipsum has been the industry's standard dummy text
-                         ever since the 1500s, when an unknown printer took a galley of 
-                         type and scrambled it to make a type specimen book.
-                    </p>
-                    <p>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting 
-                        industry. Lorem Ipsum has been the industry's standard dummy text
-                         ever since the 1500s, when an unknown printer took a galley of 
-                         type and scrambled it to make a type specimen book.
-                    </p>
-                </div>
-                <div id="skills_container">
-                    <div class="skills_title">
-                        <h1>My Skills</h1>
-                    </div>
-                    <ul>
-                        <li class="skills_items">
-                            <div class="skills_icon"><img src="./assets/html-5.svg" alt="HTML icon"></div>
-                            <div class="skills_description">
-                                <p>
-                                    Intermediary knowlodge of build the inicial layout of websites using semantic tags of HTM5
-                                </p>
-                            </div>
-                        </li>
-                        <li class="skills_items">
-                            <div class="skills_icon"><img src="./assets/css-3.svg" alt="CSS icon"></div>
-                            <div class="skills_description">
-                                <p>
-                                    Intermediary knowlodge of build the inicial layout of websites using semantic tags of HTM5
-                                </p>
-                            </div>
-                        </li>
-                        <li class="skills_items">
-                            <div class="skills_icon"><img src="./assets/javascript.svg" alt="JavaScript icon"></div>
-                            <div class="skills_description">
-                                <p>
-                                    Intermediary knowlodge of build the inicial layout of websites using semantic tags of HTM5
-                                </p>
-                            </div>
-                        </li>
-                        <li class="skills_items">
-                            <div class="skills_icon"><img src="./assets/node-js.svg" alt="Node.js icon"></div>
-                            <div class="skills_description">
-                                <p>
-                                    Intermediary knowlodge of build the inicial layout of websites using semantic tags of HTM5
-                                </p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+                <ul class="poritfolio_container">
+                    <li class="portfolio_items">
+                        <a href="./pokedex/index.html">
+                            dadada
+                        </a>
+                    </li>
+                </ul>
             </section>
         </article>
     </main>
@@ -154,4 +105,5 @@
 
     <script src="./js/script.js"></script>
 </body>
+
 </html>
