--- a/resume.html
+++ b/resume.html
@@ -86,7 +86,7 @@
                 <ul>
                     <li><a href="index.html" class="nav_link">About</a></li>
                     <li><a href="resume.html" class="nav_link">Resume</a></li>
-                    <li><a href="portfolio.html" class="nav_link">Portifolio</a></li>
+                    <li><a href="portfolio.html" class="nav_link">Portfolio</a></li>
                     <li><a href="contact.html" class="nav_link">Contact</a></li>
                 </ul>
             </nav>
