contact section almost fineshed

--- a/contact.html
+++ b/contact.html
@@ -92,16 +92,15 @@
             </nav>
             <section class="content_container">
                 <header class="title">
-                    <h1>Portfolio</h1>
+                    <h1>Contact</h1>
                 </header>
-                <ul class="poritfolio_container">
-                    <li class="portfolio_items">
-                        <a href="./pokedex/index.html">
-                           <figure>
-                           </figure>
-                        </a>
-                    </li>
-                </ul>
+               <form>
+                <div><h1>Contact Form</h1></div>
+                <input type="text" placeholder="Full name">
+                <input type="email" placeholder="Email address">
+                <textarea cols="30" rows="10"></textarea>
+                <button class="send_message_btn"><i class="ph-fill ph-paper-plane-tilt"></i>Send Message</button>
+               </form>
             </section>
         </article>
     </main>
