--- a/portfolio.html
+++ b/portfolio.html
@@ -86,11 +86,11 @@
                 <ul>
                     <li><a href="index.html" class="nav_link">About</a></li>
                     <li><a href="resume.html" class="nav_link">Resume</a></li>
-                    <li><a href="portfolio.html" class="nav_link">Portfolio</a></li>
+                    <li><a href="portfolio.html" class="nav_link selected">Portfolio</a></li>
                     <li><a href="contact.html" class="nav_link">Contact</a></li>
                 </ul>
             </nav>
-            <section class="content_container">
+            <section class="content_container" data-page="portfolio">
                 <header class="title">
                     <h1>Portfolio</h1>
                 </header>
