--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
         <article>
             <nav id="navbar">
                 <ul>
-                    <li><a href="index.html" class="nav_link">About</a></li>
+                    <li><a href="index.html" class="nav_link selected">About</a></li>
                     <li><a href="resume.html" class="nav_link">Resume</a></li>
                     <li><a href="portfolio.html" class="nav_link">Portfolio</a></li>
                     <li><a href="contact.html" class="nav_link">Contact</a></li>
                 </ul>
             </nav>
-            <section class="content_container">
+            <section class="content_container" data-page="about">
                 <div class="title">
                     <h1>About Me</h1>
                 </div>
