fixing the colege title

--- a/resume.html
+++ b/resume.html
@@ -103,7 +103,7 @@
                     </div>
                     <ul class="timeline_list">
                         <li class="timeline_items">
-                            <h2>Universidade Cruzeiro do Sul - Software enginear</h2>
+                            <h2>Universidade Cruzeiro do Sul - Software engineer</h2>
                             <p>2023 - In progress</p>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum
