fixing the CSS stylesheet

--- a/index.html
+++ b/index.html
@@ -24,21 +24,19 @@
     <main id="main_container">
         <aside id="sidebar">
             <button id="btn">
-                <img src="./assets/caret-down.svg" alt="Buttom image">
+                <i class="ph-thin ph-caret-down"></i>
                 <span>Show Contacts</span>
             </button>
             <div id="profile">
                 <div id="profile_header">
-                    <div id="profile_img">
-                        <img src="./assets/my-avatar.png" alt="My profile image">
-                    </div>
+                    <div id="profile_img"></div>
                     <div id="profile_title">
                         <h1>Wanderson Santos</h1>
                         <h3>Web developer</h3>
                     </div>
                 </div>
-                <div class="border_separator"></div>
                 <div id="profile_info">
+                    <div class="border_separator"></div>
                     <ul class="profile_info_more">
                         <li class="items_list">
                             <div class="icons"><img src="./assets/envelope.svg" alt=""></div>
@@ -80,6 +78,7 @@
                         </ul>
                     </div>
                 </div>
+            </div>
         </aside>
         <article>
             <nav id="navbar">
