--- a/portfolio.html
+++ b/portfolio.html
@@ -24,13 +24,13 @@
     <main id="main_container">
         <aside id="sidebar">
             <button id="btn">
-                <i class="ph-thin ph-caret-down"></i>
+                <ion-icon name="chevron-down-outline"></ion-icon>
                 <span>Show Contacts</span>
             </button>
             <div id="profile">
-                <div id="profile_header">
-                    <div id="profile_img"></div>
-                    <div id="profile_title">
+                <div class="profile_header">
+                    <div class="profile_img"></div>
+                    <div class="profile_title">
                         <h1>Wanderson Santos</h1>
                         <h3>Web developer</h3>
                     </div>
@@ -39,45 +39,50 @@
                     <div class="border_separator"></div>
                     <ul class="profile_info_more">
                         <li class="items_list">
-                            <div class="icons"><img src="./assets/envelope.svg" alt=""></div>
-                            <div>
-                                <p>email</p>
-                                <h3>wandersonsantospereira5@gmail.com</h3>
+                            <div class="icon_box"><ion-icon name="mail-outline"></ion-icon></i></div>
+                            <div class="contact_info">
+                                <span>EMAIL</span>
+                                <a href="mailto:wandersonsantospereira5@gmail.com"><p>wandersonsantospereira5@gmail.com</p></a>
                             </div>
                         </li>
                         <li class="items_list">
-                            <div class="icons"><img src="./assets/device-mobile.svg" alt=""></div>
-                            <div>
-                                <p>phone</p>
-                                <h3>(11) 98860-8298</h3>
+                            <div class="icon_box"><ion-icon name="phone-portrait-outline"></ion-icon></i></div>
+                            <div class="contact_info">
+                                <span>PHONE</span>
+                                <p>(11) 98860-8298</p>
                             </div>
                         </li>
                         <li class="items_list">
-                            <div class="icons"><img src="./assets/calendar.svg" alt=""></div>
-                            <div>
-                                <p>birthday</p>
-                                <h3>April 05, 2000</h3>
+                            <div class="icon_box"><ion-icon name="calendar-outline"></ion-icon></ion-icon></i></div>
+                            <div class="contact_info">
+                                <span>BIRTHDAY</span>
+                                <p>April 05, 2000</p>
                             </div>
                         </li>
                         <li class="items_list">
-                            <div class="icons"><img src="./assets/map.svg" alt=""></div>
-                            <div>
-                                <p>location</p>
+                            <div class="icon_box"><ion-icon name="location-outline"></ion-icon></ion-icon></i></div>
+                            <div class="contact_info">
+                                <span>LOCATION</span>
                                 <address>Francisco Morato, São Paulo, BR</address>
                             </div>
                         </li>
                     </ul>
                     <div class="border_separator"></div>
-                    <div id="social_icons">
+                    <div class="social_icons">
                         <ul>
-                            <li><a href="https://github.com/santowanderson"><img src="./assets/github.svg" alt=""></a>
+                            <li>
+                                <a href="https://github.com/santowanderson"><ion-icon name="logo-github"></ion-icon></a>
                             </li>
-                            <li><a href="https://www.linkedin.com/in/wanderson-santos-pereira-486920193/"><img
-                                        src="./assets/linkedin.svg" alt=""></a></li>
-                            <li><a href="https://wa.me/5511988608298"><img src="./assets/whatsapp.svg" alt=""></a></li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/wanderson-santos-pereira-486920193/"><ion-icon name="logo-linkedin"></ion-icon></a>
+                            </li>
+                            <li>
+                                <a href="https://wa.me/5511988608298"><ion-icon name="logo-whatsapp"></ion-icon></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
+            </div>
         </aside>
         <article>
             <nav id="navbar">
@@ -85,7 +90,6 @@
                     <li><a href="index.html" class="nav_link">About</a></li>
                     <li><a href="resume.html" class="nav_link">Resume</a></li>
                     <li><a href="portfolio.html" class="nav_link selected">Portfolio</a></li>
-                    <li><a href="contact.html" class="nav_link">Contact</a></li>
                 </ul>
             </nav>
             <section class="content_container" data-page="portfolio">
