--- a/portfolio.html
+++ b/portfolio.html
@@ -13,10 +13,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
-
-    <!-- Phosphos icons -->
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
-
     <title>Portfolio</title>
 </head>
 
@@ -110,6 +106,8 @@
 
 
     <script src="./js/script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
