finxing the sidebar style

--- a/resume.html
+++ b/resume.html
@@ -95,7 +95,7 @@
                 <div id="resume_content">
                     <div class="resume_timeline">
                         <div class="resume_titles">
-                            <span class="icons"><img src="./assets/book.png" alt=""></span>
+                            <div class="icon_box"><ion-icon name="book-outline"></ion-icon></div>
                             <h1>Education</h1>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                     </ul>
                     <div class="resume_timeline">
                         <div class="resume_titles">
-                            <span class="icons"><img src="./assets/book.png" alt="Book icon"></span>
+                            <div class="icon_box"><ion-icon name="book-outline"></ion-icon></div>
                             <h1>Experience</h1>
                         </div>
                     </div>
