--- a/portfolio.html
+++ b/portfolio.html
@@ -25,13 +25,15 @@
             </button>
             <div id="profile">
                 <div class="profile_header">
-                    <div class="profile_img"></div>
-                    <div class="profile_title">
+                    <figure class="profile_img">
+                        <img src="./assets/my-avatar.png" alt="Wanderson Santos" width="80px">
+                    </figure>
+                    <div>
                         <h1>Wanderson Santos</h1>
                         <h3>Web developer</h3>
                     </div>
                 </div>
-                <div id="profile_info">
+                <div class="profile_info">
                     <div class="border_separator"></div>
                     <ul class="profile_info_more">
                         <li class="items_list">
