--- a/resume.html
+++ b/resume.html
@@ -25,13 +25,15 @@
             </button>
             <div id="profile">
                 <div class="profile_header">
-                    <div class="profile_img"></div>
-                    <div class="profile_title">
+                    <figure class="profile_img">
+                        <img src="./assets/my-avatar.png" alt="Wanderson Santos" width="80px">
+                    </figure>
+                    <div>
                         <h1>Wanderson Santos</h1>
                         <h3>Web developer</h3>
                     </div>
                 </div>
-                <div id="profile_info">
+                <div class="profile_info">
                     <div class="border_separator"></div>
                     <ul class="profile_info_more">
                         <li class="items_list">
@@ -70,7 +72,7 @@
                                 <a href="https://github.com/santowanderson"><ion-icon name="logo-github"></ion-icon></a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/wanderson-santos-pereira-486920193/"><ion-icon name="logo-linkedin"></ion-icon></a>
+                                <a href="https://www.linkedin.com/in/wanderson-santos-pereira-965b9721a/"><ion-icon name="logo-linkedin"></ion-icon></a>
                             </li>
                             <li>
                                 <a href="https://wa.me/5511988608298"><ion-icon name="logo-whatsapp"></ion-icon></a>
@@ -89,9 +91,9 @@
                 </ul>
             </nav>
             <section class="content_container" data-page="resume">
-                <div class="title">
+                <header class="title">
                     <h1>Resume</h1>
-                </div>
+                </header>
                 <div id="resume_content">
                     <div class="resume_timeline">
                         <div class="resume_titles">
