--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <main id="main_container">
+    <main>
         <aside id="sidebar">
             <button id="btn">
                 <ion-icon name="chevron-down-outline"></ion-icon>
@@ -25,15 +25,17 @@
             </button>
             <div id="profile">
                 <div class="profile_header">
-                    <div class="profile_img"></div>
-                    <div class="profile_title">
+                    <figure class="profile_img">
+                        <img src="./assets/my-avatar.png" alt="Wanderson Santos" width="80px">
+                    </figure>
+                    <div>
                         <h1>Wanderson Santos</h1>
                         <h3>Web developer</h3>
                     </div>
                 </div>
-                <div id="profile_info">
+                <div class="profile_info">
                     <div class="border_separator"></div>
-                    <ul class="profile_info_more">
+                    <ul>
                         <li class="items_list">
                             <div class="icon_box"><ion-icon name="mail-outline"></ion-icon></i></div>
                             <div class="contact_info">
@@ -113,7 +115,6 @@
                     <div class="my_skills">
                         <ul>
                             <li class="skills_items">
-                                
                             </li>
                             <li class="skills_items"></li>
                             <li class="skills_items"></li>
