started responsive style

--- a/resume.html
+++ b/resume.html
@@ -104,7 +104,7 @@
                     <ul class="timeline_list">
                         <li class="timeline_items">
                             <h2>Universidade Cruzeiro do Sul - Software engineer</h2>
-                            <p>2023 - In progress</p>
+                            <span>2023 - In progress</span>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum
                                 repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id
@@ -113,7 +113,7 @@
                         </li>
                         <li class="timeline_items">
                             <h2>SENAI IT School - Computer Network</h2>
-                            <p>2019 - 2020</p>
+                            <span>2019 - 2020</span>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum
                                 repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id
@@ -122,7 +122,7 @@
                         </li>
                         <li class="timeline_items">
                             <h2>CNA - English School</h2>
-                            <p>2016 - 2021</p>
+                            <span>2016 - 2021</span>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum
                                 repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id
@@ -139,7 +139,7 @@
                     <ul class="timeline_list">
                         <li class="timeline_items">
                             <h2>Foundever - Tecncial Support Analyst</h2>
-                            <p>2023 - Present</p>
+                            <span>2023 - Present</span>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum
                                 repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id
@@ -148,7 +148,7 @@
                         </li>
                         <li class="timeline_items">
                             <h2>Fidelity - Incoming telemarketer</h2>
-                            <p>2018 - 2019</p>
+                            <span>2018 - 2019</span>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam aspernatur cum at ipsum
                                 repellendus facere. Temporibus placeat sapiente praesentium vero velit aperiam id
