--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <li><a href="portfolio.html" class="nav_link">Portfolio</a></li>
                 </ul>
             </nav>
-            <section class="content_container" data-page="about">
+            <section class="content_container">
                 <header class="title">
                     <h1>About Me</h1>
                 </header>
@@ -110,7 +110,7 @@
                 </div>
                 <section class="skills_container">
                     <header>
-                        My skills
+                        <h1>My skills</h1>
                     </header>
                     <div class="my_skills">
                         <ul>
@@ -122,6 +122,7 @@
                         </ul>
                     </div>
                 </section>
+            </section>
         </article>
     </main>
 
